2005-07-24  Nathaniel Smith  <njs@pobox.com>

	* change_set.cc (merge_change_sets, check_sane)
	(concatenate_change_sets, invert_change_set): Add M()s.

2005-07-24  Nathaniel Smith  <njs@pobox.com>

	* sanity.{hh,cc} (dump): Remove templated version, add std::string
	version.
	* vocab.{hh,cc} (dump): Add ATOMIC/DECORATE/ENCODING dumpers.
	* change_set.{hh,cc} (dump): Add change_set dumper.
	* manifest.{hh,cc} (dump): Add manifest_map dumper.
	* revision.cc (check_sane_history): Add some M()s.

2005-07-24  Nathaniel Smith  <njs@pobox.com>

	* sanity.hh (class Musing, gasp, dump): Actually, take a
	std::string instead of a std::ostream; fits our idioms better.

2005-07-24  Nathaniel Smith  <njs@pobox.com>

	* sanity.cc (log, progress, warning): Append '\n' to strings when
	necessary.
	(gasp): Save string properly.
	(M): Apply black magic.  Now works correctly.
	(dump): Write newline.

2005-07-24  Nathaniel Smith  <njs@pobox.com>

	* sanity.hh (dump): Add a default 'dump' implementation for all
	<<able objects.

2005-07-24  Nathaniel Smith  <njs@pobox.com>

	* constants.{cc,hh} (default_terminal_width): New constant.
	* ui.cc (guess_terminal_width): Use it.

2005-07-24  Nathaniel Smith  <njs@pobox.com>

	* diff_patch.cc (unidiff_append_test): Fix typo.

2005-07-24  Nathaniel Smith  <njs@pobox.com>

	* tests/t_annotate_no_rev.at: New test.
	* testsuite.at: Add it.
	
2005-07-24  Nathaniel Smith  <njs@pobox.com>

	* sanity.{hh,cc} (sanity, dump_buffer, invariant_failure)
	(index_failure,	MusingI, Musing, M): Implement macro M(), for
	'musing', which marks data that monotone was musing over when an
	invariant tripped.
	* Makefile.am (MOST_SOURCES): Fix spacing.

2005-07-23  Nathaniel Smith  <njs@pobox.com>

	* ui.{hh,cc} (guess_terminal_width): New function.
	(tick_write_dot::chars_on_line): Make unsigned to quiet gcc warning.
	(tick_write_dot::write_ticks): Use guess_terminal_width.
	* commands.cc (dump_diffs): Take full responsibility for printing