@@ -247,9 +247,22 @@ sanity::gasp()
   for (std::vector<MusingI const *>::const_iterator
          i = musings.begin(); i != musings.end(); ++i)
     {
-      std::string tmp;
-      (*i)->gasp(tmp);
-      out << tmp;
+      try
+        {
+          std::string tmp;
+          (*i)->gasp(tmp);
+          out << tmp;
+        }
+      catch (logic_error)
+        {
+          out << "<caught logic_error>\n";
+          L(F("ignoring error trigged by saving work set to debug log"));
+        }
+      catch (informative_failure)
+        {
+          out << "<caught informative_failure>\n";
+          L(F("ignoring error trigged by saving work set to debug log"));
+        }
     }
   gasp_dump = out.str();
   L(F("finished saving work set"));
